syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "DatabaseProto";
option java_package = "org.example";
option objc_class_prefix = "RTG";

import "google/protobuf/any.proto";


service DatabaseGrpcService{

  rpc CreateRecord(Record) returns (Record) {}
  rpc GetMerkle(Empty) returns (MerkleTree) {}
}

message Record{
    int64 key = 1;
    string value = 2;
}

message MerkleTree{
  string node = 1;
}

message Empty{

}